# procedural-subt-gen

./: .gitignore  DEADJOE  DepthCamera_2022-12-01-13-01-40.json  README.md  bpa_mesh.ply  copy_of_knot.ply  generate_random_graph.py  graph.pkl  gst.yaml  noise.txt  normals.npy  output.txt  perlin_noise_trials.py  points.npy  pruebas.py  pyproject.toml  requirements.txt  setup.cfg  tree.yaml  untitled.dae  world.world
datafiles/: copy_of_knot.ply  graph.pkl  graph_.pkl  originial.ply  simplified.ply  untitled.ply
meshes/: 0.ply  1.ply  10.ply  11.ply  12.ply  2.ply  3.ply  4.ply  5.ply  6.ply  7.ply  8.ply  9.ply
pdf/: fit2mp4  pdf-shrink-dico  pdfshrink
scripts/: EasyConfig.py  code_snippet.py  combinatorial_one_tunel_envs.py  error.py  feature_request.py  generate-tunnel-qt.py  generate_environments.py  generate_graph_for_paper.py  generate_multiple_tunnel_envs.sh  generate_one_tunnel_env.py  generate_random_graph.py  generate_single_tunnel.py  kakka2.yaml  minimal_example_danilo_1.py  minimal_example_danilo_2.py  paper_snippet.py  pointcloud_from_graph.py  show_intersection_cleaning.py  show_meshing_process.py  snipet_of_paper_1.py  snipet_of_paper_2.py  snippet_1.py  snippet_2.py  snippet_3.py  tunnel_with_some_rocks.py  uavcontrol.py  visualize_env.py
scripts/lorenzo/: code_snippet.py  generate_graph_for_paper.py  generate_random_graph.py  generate_random_graph_environment.py  one_graph_many_mesh.py  plot_many_meshes.py  plot_mesh.py  plot_meshes_in_folder.py  plot_tunnel_creation_process.py  save_meshing_graphs.py  show_intersection_cleaning.py  show_meshing_process.py
src/: PARAMS.py  display_functions.py  generate_random_graph.py  graph.py  helper_functions.py  mesh_from_graph.py  mesh_generation.py  pointcloud_from_graph.py  tunnel.py
src/subt_proc_gen/: PARAMS.py  display_functions.py  gazebo_base_sdf_text.py  gazebo_file_gen.py  gazebo_world_gen.py  geometry.py  graph.py  helper_functions.py  mesh_generation.py  mesh_generation_legacy.py  mesh_generation_params.py  mesh_operations.py  param_classes.py  perlin.py  snippet.py  spline.py  tunnel.py  tunnel_2.py  tunnel_legacy.py
tests/: geometry_tests.py  graph_tests.py  mesh_gen_tests.py  test_gazebo_world_gen.py  tunnel_tests.py
