[metadata]
name = SubterraneanProceduralGeneration
author = Lorenzo Cano
author_email = lcano@unizar.es
url = https://github.com/LorenzoCanoAn/procedural-subt-gen
description = Package to genearate meshes that look like underground environments
long_description_content_type = text/markdown
keywords = python, procedural_generation
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
      =src
packages = find:
